--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,27 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
   <title>Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="content">
-  <section class="sec-1">
+<div class="content">  
+  <section class="content-2">
+    <div id="sec-1"></div>
   <div class="left">
-  <h1>Hey,<br>
-  I'm Sandy </h1>
-  <h2>I design and <br>
-    develop Front-End <br>
-    & WordPress <br>
-    websites</h2>
+    <div class="text">
+      <h1 class="cool">Hey,<br>
+      I'm Sandy </h1>
+      <h2 class="cool">I design and <br>
+        develop Front-End <br>
+        & WordPress <br>
+        websites</h2>
+      </div>
   </div>
   <div class="right">
       <nav>
       <ul>
-        <li>About</li>
-        <li>Contact</li>
+        <a href=""><li>About</li></a>
+        <a href=""><li>Contact</li></a>
       </ul>
     </nav>
   </div>
-  </section>
+</section>
 </div>
 
 </body>
