--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,26 +13,30 @@
 <body>
 <div class="content">  
   <section class="content-2">
-    <div id="sec-1"></div>
+    <div id="sec-1"></div>    
+
+
+  <!-- <div class="right"> -->
+    <nav>
+      <ul>
+        <a href="about.html"><li>About</li></a>
+        <a href="contact.html"><li>Contact</li></a>
+      </ul>
+    </nav>
+  <!-- </div> -->
+
   <div class="left">
     <div class="text">
-      <h1 class="cool">Hey,<br>
-      I'm Sandy </h1>
-      <h2 class="cool">I design and <br>
+      <h1 id="first">Hey,</h1><br>
+      <h1 id="second">I'm Sandy </h1>     <br>
+        <h2 id="third">I design and <br>
         develop Front-End <br>
         & WordPress <br>
         websites</h2>
       </div>
   </div>
-  <div class="right">
-      <nav>
-      <ul>
-        <a href=""><li>About</li></a>
-        <a href=""><li>Contact</li></a>
-      </ul>
-    </nav>
-  </div>
-</section>
+
+  </section>
 </div>
 
 </body>
