--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -23,9 +23,12 @@
     <h1 class="message-me">Send a message!</h1>
 
     <div class="info">
-        <div class="email"><i class="far fa-envelope"></i> s.polna@outlook.com</div>
-        <div class="linked"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/spolna292/"> linkedin.com/in/spolna292/</a></div>
+        <div class="email"><p><i class="far fa-envelope"></i><a href="mailto:s.polna@outlook.com"> s.polna@outlook.com</a></p> </div>
+        <div class="linked"><p><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/spolna292/"> linkedin.com/in/spolna292/</a></p></div>
     </div>
 
+    <img class="pointing" src="img/pointing.png" alt="">
+    
+    <footer class="contact">@me</footer>
 </body>
 </html>
