--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h2 class="text-center mt-5 mb-3">Allow me to introduce myself</h2>
       <div class="row">
         <div class="col-10 col-xl-8 mx-auto mb-5">
-          <p>I’m a web developer with about 2 years of experience in website development. While I specialize in custom WordPress theme development, I enjoy taking on a variety of tasks. I have experience working with Shopify and Joomla, and I’ve created full-scale dynamic websites using Laravel Blade.
+          <p>I’m a web developer with about 3 years of experience in website development. While I specialize in custom WordPress theme development, I enjoy taking on a variety of tasks. I have experience working with Shopify and Joomla, and I’ve created full-scale dynamic websites using Laravel Blade.
             <br>
             I can help you create a functional front-end website from any design using HTML, CSS, and JavaScript. For more dynamic pages, I can work on your website’s back-end with PHP, Laravel, and databases.            <br>
           </p>       
@@ -100,10 +100,21 @@
 
   <section id="mywork" class="content">
     <div class="mywork pb-3">
-      <h2 class="pt-5 pb-3">My Work</h2>
+      <h2 class="pt-5">My Work</h2>
+      <p class="mx-auto pb-3">Built on WordPress</p>
       <div class="project-list row no-margin">
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Lopez&DeFilippo</h3>
+          <h3>Wattel and York</h3>
+          <a href="https://www.wattelandyork.com/" target="_blank" rel="noopener noreferrer">
+            <div class="project-bg wy"></div>
+          </a>
+          <div class="demo">
+            <a class="btn btn-outline-white" href="https://www.wattelandyork.com/" target="_blank" rel="noopener noreferrer">View Page</a>
+            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
+          </div>
+        </div>
+        <div class="project col-12 col-md-3 col-xl-4 mx-auto">
+          <h3>Lopez & DeFilippo</h3>
           <a href="https://lopezdefilippo.com/" target="_blank" rel="noopener noreferrer">
             <div class="project-bg ldf"></div>
           </a>
@@ -112,18 +123,9 @@
             <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
+      
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Dental Staffing Reviews</h3>
-          <a href="https://dentalstaffingreviews.com/" target="_blank" rel="noopener noreferrer">
-            <div class="project-bg dsr"></div>
-          </a>
-          <div class="demo">
-            <a class="btn btn-outline-white" href="https://dentalstaffingreviews.com/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
-          </div>
-        </div>
-        <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>RMFW</h3>
+          <h3>RMFW Law</h3>
           <a href="https://rmfwlaw.com/" target="_blank" rel="noopener noreferrer">
             <div class="project-bg rmfw"></div>
           </a>
@@ -133,12 +135,12 @@
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Andrew S Bisom</h3>
-          <a href="https://andrewsbisom.com/" target="_blank" rel="noopener noreferrer">
-            <div class="project-bg asb"></div>
+          <h3>Kaufman Steinberg</h3>
+          <a href="https://kaufmansteinberg.com/" target="_blank" rel="noopener noreferrer">
+            <div class="project-bg ks"></div>
           </a>
           <div class="demo">
-            <a class="btn btn-outline-white" href="https://andrewsbisom.com/" target="_blank" rel="noopener noreferrer">View Page</a>
+            <a class="btn btn-outline-white" href="https://kaufmansteinberg.com/" target="_blank" rel="noopener noreferrer">View Page</a>
             <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
@@ -171,14 +173,15 @@
       <h2 class="pt-4 mb-3">Personal Projects</h2>
       <div class="project-list row no-margin">
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Crossfit Box</h3>
-          <a href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer">
-            <div class="project-bg cfb"></div>
+          <h3>Social Publishing Platform</h3>
+          <a href="https://byfaxxuv.a2hosted.com/" target="_blank" rel="noopener noreferrer">
+            <div class="project-bg spp"></div>
           </a>
-          <p>Built with Laravel 11</p>
+          <p>Social Publishing Platform</p>
+          <p>Laravel 10 <br> Tailwind CSS</p>
           <div class="demo">
-            <!-- <a class="btn btn-outline-white" href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer">Demo</a> -->
-            <a class="btn btn-outline-white" href="https://github.com/solarwind559/crossfit-box" title="View with screenshots">View Code</a>
+            <a class="btn btn-outline-white" href="https://byfaxxuv.a2hosted.com/" target="_blank" rel="noopener noreferrer">Demo</a>
+            <a class="btn btn-outline-white" href="https://github.com/solarwind559/Social-Publishing-Platform/tree/v-2" title="View with screenshots">View Code</a>
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
@@ -186,10 +189,23 @@
           <a href="https://github.com/solarwind559/Library-Management" target="_blank" rel="noopener noreferrer">
             <div class="project-bg lib"></div>
           </a>
-          <p>PHP OOP, interaction between database tables</p>
+          <p>Basic Library Management system for librarians and students</p>
+          <p>PHP <br> Bootstrap <br></p>
           <div class="demo">
-            <!-- <a class="btn btn-outline-white" href="http://your-library-management-site.service.com" target="_blank" rel="noopener noreferrer">Demo</a> -->
+            <a class="btn btn-outline-white" href="http://library-management-sys.atwebpages.com/" target="_blank" rel="noopener noreferrer">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/Library-Management" title="View with screenshots">View Code</a>
+          </div>
+        </div>
+        <div class="project col-12 col-md-3 col-xl-4 mx-auto">
+          <h3>Crossfit Box</h3>
+          <a href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer">
+            <div class="project-bg cfb"></div>
+          </a>
+          <p>Gym website with a blog page</p>
+          <p>Laravel 11 <br> Bootstrap</p>
+          <div class="demo">
+            <!-- <a class="btn btn-outline-white" href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer">Demo</a> -->
+            <a class="btn btn-outline-white" href="https://github.com/solarwind559/crossfit-box" title="View with screenshots">View Code</a>
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
@@ -215,7 +231,7 @@
         <a class="btn btn-outline-custom" href="https://www.linkedin.com/in/spolna292/" target="_blank" rel="noopener noreferrer" title="Contact me on LinkedIn">LinkedIn</a>
         <a class="btn btn-outline-custom" href="https://github.com/solarwind559" target="_blank" rel="noopener noreferrer" title="View my GitHub profile">GitHub</a>
         <a class="btn btn-outline-custom" href="mailto:s.polna@yahoo.com" target="_blank" rel="noopener noreferrer" title="Email me at s.polna@yahoo.com">Email Me</a>
-        <a class="btn btn-outline-custom" href="files/SP_Resume_english_2024.pdf" download title="Download my CV">Download CV</a>
+        <a class="btn btn-outline-custom" href="files/Sanda_Polna_resume_ENG_2024.pdf" download title="Download my CV">Download CV</a>
       </div>
     </div>
   </section>
