--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
           <p class="type">Bootstrap</p>
         </div>
         <div class="js text-center m-3">
+          <img class="icns" src="img/tailwind-css-icon.svg" alt="">
+          <p class="type">Tailwind</p>
+        </div>
+        <div class="js text-center m-3">
           <img class="icns" src="img/javascript-original.svg" alt="">
           <p class="type">JavaScript</p>
         </div>
