--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <p class="mx-auto pb-3">Built on WordPress</p>
       <div class="project-list row no-margin">
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Wattel and York</h3>
+          <h3>Wattel & York</h3>
           <a href="https://www.wattelandyork.com/" target="_blank" rel="noopener noreferrer">
             <div class="project-bg wy"></div>
           </a>
