--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
           <img class="icns" src="img/javascript-original.svg" alt="">
           <p class="type">JavaScript</p>
         </div>
+        <div class="js text-center m-3">
+          <img class="icns" src="img/vuejs-original.svg" alt="">
+          <p class="type">Vue.js</p>
+        </div>
       </div>
       <div class="d-flex flex-wrap justify-content-center">
         <div class="php text-center m-3">
