--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <nav>
     <div class="container">
       <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#mywork">My Work</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about" data-content="About Me">About Me</a></li>
+        <li><a href="#mywork" data-content="My Work">My Work</a></li>
+        <li><a href="#contact" data-content="Contact">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -42,49 +42,49 @@
     <div class="container">
       <h2 class="text-center pt-5 pb-3">My Skills</h2>
       <div class="d-flex flex-wrap justify-content-center">
-        <div class="html text-center m-3">
+        <div class="html icon-wrap text-center m-3">
           <img class="icns" src="img/html5-original.svg" alt="">
           <p class="type">HTML</p>
         </div>
-        <div class="css text-center m-3">
+        <div class="css icon-wrap text-center m-3">
           <img class="icns" src="img/css3-original.svg" alt="">
           <p class="type">CSS</p>
         </div>
-        <div class="sass text-center m-3">
+        <div class="sass icon-wrap text-center m-3">
           <img class="icns" src="img/sass-original.svg" alt="">
           <p class="type">SASS</p>
         </div>
-        <div class="bs text-center m-3">
+        <div class="bs icon-wrap text-center m-3">
           <img class="icns" src="img/bootstrap-plain.svg" alt="">
           <p class="type">Bootstrap</p>
         </div>
-        <div class="js text-center m-3">
+        <div class="js icon-wrap text-center m-3">
           <img class="icns" src="img/tailwind-css-icon.svg" alt="">
           <p class="type">Tailwind</p>
         </div>
-        <div class="js text-center m-3">
+        <div class="js icon-wrap text-center m-3">
           <img class="icns" src="img/javascript-original.svg" alt="">
           <p class="type">JavaScript</p>
         </div>
-        <div class="js text-center m-3">
+        <div class="js icon-wrap text-center m-3">
           <img class="icns" src="img/vuejs-original.svg" alt="">
           <p class="type">Vue.js</p>
         </div>
       </div>
       <div class="d-flex flex-wrap justify-content-center">
-        <div class="php text-center m-3">
+        <div class="php icon-wrap text-center m-3">
           <img class="icns" src="img/php-plain.svg" alt="">
           <p class="type">PHP</p>
         </div>
-        <div class="php text-center m-3">
+        <div class="php icon-wrap text-center m-3">
           <img class="icns" src="img/laravel.png" alt="">
           <p class="type">Laravel</p>
         </div>
-        <div class="sql text-center m-3">
+        <div class="sql icon-wrap text-center m-3">
           <img class="icns" src="img/mysql-original-wordmark.svg" alt="">
           <p class="type">MySQL</p>
         </div>
-        <div class="wp text-center m-3">
+        <div class="wp icon-wrap text-center m-3">
           <img class="icns" src="img/wordpress-plain.svg" alt="">
           <p class="type">WordPress</p>
         </div>
@@ -97,9 +97,9 @@
       <h2 class="text-center mt-5 mb-3">Allow me to introduce myself</h2>
       <div class="row">
         <div class="col-10 col-xl-8 mx-auto mb-5">
-          <p>I’m a web developer with about 3 years of experience in website development. While I specialize in custom WordPress theme development, I enjoy taking on a variety of tasks. I have experience working with Shopify and Joomla, and I’ve created full-scale dynamic websites using Laravel Blade.
+          <p>I am a programmer with about 3 years of experience in website development. While I specialize in custom WordPress theme development, I enjoy a variety of tasks. I have experience working with Shopify and Joomla, and I’ve created full-scale dynamic websites using Laravel.
             <br>
-            I can help you create a functional front-end website from any design using HTML, CSS, and JavaScript. For more dynamic pages, I can work on your website’s back-end with PHP, Laravel, and databases.            <br>
+            I can help you create a functional front-end website from any design using HTML, CSS, and JavaScript. For more dynamic pages, I can work on your website’s back-end with PHP, Laravel, and databases.<br>
           </p>       
         </div>
       </div>
@@ -109,67 +109,61 @@
   <section id="mywork" class="content">
     <div class="mywork pb-3">
       <h2 class="pt-5">My Work</h2>
-      <p class="mx-auto pb-3">Built on WordPress</p>
+      <h4 class="mx-auto pb-3">(Built on WordPress)</h4>
       <div class="project-list row no-margin">
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Wattel & York</h3>
-          <a href="https://www.wattelandyork.com/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.wattelandyork.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg wy"></div>
           </a>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://www.wattelandyork.com/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Lopez & DeFilippo</h3>
-          <a href="https://lopezdefilippo.com/" target="_blank" rel="noopener noreferrer">
+          <a href="https://lopezdefilippo.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg ldf"></div>
           </a>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://lopezdefilippo.com/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
       
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>RMFW Law</h3>
-          <a href="https://rmfwlaw.com/" target="_blank" rel="noopener noreferrer">
+          <a href="https://rmfwlaw.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg rmfw"></div>
           </a>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://rmfwlaw.com/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Kaufman Steinberg</h3>
-          <a href="https://kaufmansteinberg.com/" target="_blank" rel="noopener noreferrer">
+          <a href="https://kaufmansteinberg.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg ks"></div>
           </a>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://kaufmansteinberg.com/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Big Al's Roofing</h3>
-          <a href="https://www.bigalsroofing.com/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.bigalsroofing.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg bigals"></div>
           </a>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://www.bigalsroofing.com/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="#">Code</a> -->
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Tērvetes Alus</h3>
-          <a href="https://tervetesal.lv/" target="_blank" rel="noopener noreferrer">
+          <a href="https://tervetesal.lv/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg ta"></div>
           </a>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://tervetesal.lv/" target="_blank" rel="noopener noreferrer">View Page</a>
-            <!-- <a class="btn btn-outline-white" href="https://github.com/solarwind559/tervetesal-theme target="_blank" rel="noopener noreferrer">Code</a> -->
           </div>
         </div>
       </div>
@@ -181,12 +175,12 @@
       <h2 class="pt-4 mb-3">Personal Projects</h2>
       <div class="project-list row no-margin">
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Social Publishing Platform</h3>
-          <a href="https://byfaxxuv.a2hosted.com/" target="_blank" rel="noopener noreferrer">
+          <h3>Social Publishing</h3>
+          <a href="https://byfaxxuv.a2hosted.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg spp"></div>
           </a>
-          <p>Social Publishing Platform</p>
-          <p>Laravel 10 <br> Tailwind CSS</p>
+          <p>Social publishing platform for posting</p>
+          <p>Built with Laravel 10, Tailwind CSS</p>
           <div class="demo">
             <a class="btn btn-outline-white" href="https://byfaxxuv.a2hosted.com/" target="_blank" rel="noopener noreferrer">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/Social-Publishing-Platform/tree/v-2" title="View with screenshots">View Code</a>
@@ -194,36 +188,36 @@
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Library Management</h3>
-          <a href="https://github.com/solarwind559/Library-Management" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/solarwind559/Library-Management" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg lib"></div>
           </a>
-          <p>Basic Library Management system for librarians and students</p>
-          <p>PHP <br> Bootstrap <br></p>
+          <p>Basic Library Management system for librarians and members</p>
+          <p>Built with PHP, Bootstrap, JavaScript</p>
           <div class="demo">
             <a class="btn btn-outline-white" href="http://library-management-sys.atwebpages.com/" target="_blank" rel="noopener noreferrer">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/Library-Management" title="View with screenshots">View Code</a>
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Crossfit Box</h3>
-          <a href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer">
+          <h3>Crossfit Box Gym</h3>
+          <a href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg cfb"></div>
           </a>
           <p>Gym website with a blog page</p>
-          <p>Laravel 11 <br> Bootstrap</p>
+          <p>Built with Laravel 11, Bootstrap</p>
           <div class="demo">
             <!-- <a class="btn btn-outline-white" href="https://github.com/solarwind559/crossfit-box" target="_blank" rel="noopener noreferrer">Demo</a> -->
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/crossfit-box" title="View with screenshots">View Code</a>
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Swiper</h3>
-          <a href="https://solarwind559.github.io/carousel_swiper/" target="_blank" rel="noopener noreferrer">
+          <h3>Swiper Photo Album</h3>
+          <a href="https://solarwind559.github.io/carousel_swiper/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg swiper"></div>
           </a>
           <p>Small test task for React Swiper</p>            
           <div class="demo">
-            <a class="btn btn-outline-white" href="https://solarwind559.github.io/carousel_swiper/" target="_blank" rel="noopener noreferrer">Demo</a>
+            <a class="btn btn-outline-white" href="https://solarwind559.github.io/carousel_swiper/" target="_blank" rel="noopener noreferrer" title="Visit page">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/carousel_swiper">View Code</a>
           </div>
         </div>
@@ -245,7 +239,7 @@
   </section>
 
   <div class="up">
-    <a id="top"><i class="fas fa-arrow-alt-circle-up"></i></a>
+    <a id="top" title="Up!"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
 
   <footer>@me</footer>
