--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h2 class="text-center mt-5 mb-3">Allow me to introduce myself</h2>
       <div class="row">
         <div class="col-10 col-xl-8 mx-auto mb-5">
-          <p>I am a programmer with about 3 years of experience in website development. While I specialize in custom WordPress theme development, I enjoy a variety of tasks. I have experience working with Shopify and Joomla, and I’ve created full-scale dynamic websites using Laravel.
+          <p>I am a programmer with about 3 years of experience in website development, and a background in art and design. While I specialize in custom WordPress theme development, I enjoy a variety of tasks. I have experience working with Shopify and Joomla, and I’ve created full-scale dynamic websites using Laravel.
             <br>
             I can help you create a functional front-end website from any design using HTML, CSS, and JavaScript. For more dynamic pages, I can work on your website’s back-end with PHP, Laravel, and databases.<br>
           </p>       
@@ -244,20 +244,7 @@
 
   <footer>@me</footer>
 
-  <script>
-      window.addEventListener('scroll', function() {
-          const scrollToTopButton = document.getElementById('top');
-          if (window.scrollY > 200) {
-              scrollToTopButton.style.display = 'block';
-          } else {
-              scrollToTopButton.style.display = 'none';
-          }
-      });
-
-      document.getElementById('top').addEventListener('click', function() {
-          window.scrollTo({ top: 0, behavior: 'smooth' });
-      });
-  </script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
