--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
-          <h3>Tērvetes Alus</h3>
-          <a href="https://tervetesal.lv/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
-            <div class="project-bg ta"></div>
+          <h3>Andrew S. Bisom</h3>
+          <a href="https://andrewsbisom.com/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
+            <div class="project-bg asb"></div>
           </a>
           <div class="demo">
-            <a class="btn btn-outline-white" href="https://tervetesal.lv/" target="_blank" rel="noopener noreferrer">View Page</a>
+            <a class="btn btn-outline-white" href="https://andrewsbisom.com/" target="_blank" rel="noopener noreferrer">View Page</a>
           </div>
         </div>
       </div>
@@ -211,11 +211,22 @@
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
+          <h3>Memory Game</h3>
+          <a href="https://solarwind559.github.io/memory-game/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
+            <div class="project-bg memory"></div>
+          </a>
+          <p>Wildlife Memory game, built with Vue.js</p>            
+          <div class="demo">
+            <a class="btn btn-outline-white" href="https://solarwind559.github.io/memory-game/" target="_blank" rel="noopener noreferrer" title="Visit page">Demo</a>
+            <a class="btn btn-outline-white" href="https://github.com/solarwind559/memory-game">View Code</a>
+          </div>
+        </div>
+        <div class="project col-12 col-md-3 col-xl-4 mx-auto">
           <h3>Swiper Photo Album</h3>
           <a href="https://solarwind559.github.io/carousel_swiper/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg swiper"></div>
           </a>
-          <p>Small test task for React Swiper</p>            
+          <p>Small test photo album with React Swiper</p>            
           <div class="demo">
             <a class="btn btn-outline-white" href="https://solarwind559.github.io/carousel_swiper/" target="_blank" rel="noopener noreferrer" title="Visit page">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/carousel_swiper">View Code</a>
