--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/b6aa1f1735.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -253,7 +254,11 @@
     <a id="top" title="Up!"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
 
-  <footer>@me</footer>
+  <footer class="d-flex justify-content-center">
+    <span class="text-white">@me |
+      &nbsp;</span> 
+    <a class="more-link" href="https://github.com/solarwind559/portfolio">This page has been built with HTML, SCSS, Bootstrap & jQuery</a>
+  </footer>
 
   <script src="js/main.js"></script>
 
