--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
           <p>Social publishing platform for posting</p>
           <p>Built with Laravel 10, Tailwind CSS</p>
           <div class="demo">
-            <a class="btn btn-outline-white" href="https://byfaxxuv.a2hosted.com/" target="_blank" rel="noopener noreferrer">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/Social-Publishing-Platform/tree/v-2" title="View with screenshots">View Code</a>
           </div>
         </div>
@@ -220,6 +219,16 @@
           <div class="demo">
             <a class="btn btn-outline-white" href="https://solarwind559.github.io/memory-game/" target="_blank" rel="noopener noreferrer" title="Visit page">Demo</a>
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/memory-game">View Code</a>
+          </div>
+        </div>
+        <div class="project col-12 col-md-3 col-xl-4 mx-auto">
+          <h3>Flutter Quiz</h3>
+          <a href="https://solarwind559.github.io/flutter_quiz/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
+            <div class="project-bg flutter"></div>
+          </a>
+          <p>Flutter Quiz project with theory questions</p>            
+          <div class="demo">
+            <a class="btn btn-outline-white" href="https://github.com/solarwind559/flutter_quiz">View Code</a>
           </div>
         </div>
         <div class="project col-12 col-md-3 col-xl-4 mx-auto">
