--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <a href="https://solarwind559.github.io/flutter_quiz/" target="_blank" rel="noopener noreferrer" class="project-bg-wrap" title="Visit page">
             <div class="project-bg flutter"></div>
           </a>
-          <p>Flutter Quiz project with theory questions</p>            
+          <p>Flutter Quiz with theory questions, built with Flutter</p>            
           <div class="demo">
             <a class="btn btn-outline-white" href="https://github.com/solarwind559/flutter_quiz">View Code</a>
           </div>
