--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <p><span style="padding-left: 30px;"></span>I am a Full-Stack developer with 3+ years of experience in programming, and a background in art and design.
             <br>
             I have experience with different programming languages and tools, the most notable ones being 
-            <span class="span-text">HTML, CSS/SCSS, Bootstrap, Tailwind, JavaScript, Vue.js, PHP, Laravel, WordPress</span> and <span class="span-text">SQL</span>
-             databases. I have basic level skills also in <span class="span-text">C#, ASP.NET core, Angular</span> and <span class="span-text">Flutter</span>.
+            <span class="tech-text">HTML, CSS/SCSS, Bootstrap, Tailwind, JavaScript, Vue.js, PHP, Laravel, WordPress</span> and <span class="tech-text">SQL</span>
+             databases. I have basic level skills also in <span class="tech-text">C#, ASP.NET core, Angular</span> and <span class="tech-text">Flutter</span>.
             <br>
             <span style="padding-left: 30px;"></span>And I am always open to learning more, as I do enjoy creating and making things work! 
             I would be happy to talk and share more about my professional experience and see how we can work together.
@@ -134,7 +134,7 @@
           </a>
           <p>Jelly Belly Beans website</p> 
           <ul class="projects-ul">
-            <li>Built with Vue.js, SCSS and Bootstrap</li>
+            <li>Built with <span class="tech-text">Vue.js</span>, <span class="tech-text">SCSS</span>, <span class="tech-text">Bootstrap</span></li>
             <li>Used the Jelly Belly API to access the Jelly Belly database</li>
             <li>Used Axio library for HTTP requests and communication with the API</li>
             <li>Implemented data fetching and state management</li>
@@ -154,11 +154,11 @@
             <div class="project-bg lib"></div>
           </a>
           <p>Library Management system for librarians and members</p>
-          <!-- <p>Built with PHP, Bootstrap, JavaScript</p> -->
           <ul class="projects-ul">
-            <li>Built with PHP, Bootstrap, JavaScript</li>
+            <li>Built with <span class="tech-text">PHP</span>, <span class="tech-text">Bootstrap</span>, <span class="tech-text">JavaScript</span>, <span class="tech-text">MySQL</span></li>
             <li>Implemented different access controls for admins and users</li>
             <li>Developed a full CRUD functionality</li>
+            <li>Used model factories and database seeders to populate database</li>
             <li>Utilized foreign keys to establish and maintain database relationships</li>
             <li>Added filter and sort functionalities</li>
             <li>Created an alert system for overdue books to notify users and admin</li>
@@ -176,7 +176,7 @@
           </a>
           <p>Social publishing platform for posting</p>
           <ul class="projects-ul">
-            <li>Built with Laravel 10, Tailwind CSS</li>
+            <li>Built with <span class="tech-text">Laravel</span>, <span class="tech-text">Tailwind CSS</span>, <span class="tech-text">MySQL</span></li>
             <li>Developed a full CRUD functionality</li>
             <li>Utilized foreign keys to establish and maintain database relationships</li>
             <li>Added filter and sort functionalities</li>
@@ -194,9 +194,8 @@
             <div class="project-bg wy"></div>
           </a>
           <p>Law Firm business website</p>
-          <!-- <p>Built on WordPress, with SCSS, jQuery, PHP</p> -->
           <ul class="projects-ul">
-            <li>Built on WordPress, with SCSS, jQuery, PHP</li>
+            <li>Built with <span class="tech-text">WordPress</span>, <span class="tech-text">SCSS</span>, <span class="tech-text">jQuery</span>, <span class="tech-text">PHP</span>, <span class="tech-text">SQLite</span></li>
             <li>Converted a Figma design into a fully functional website</li>
             <li>Migrated content and data from the previous website</li>
             <li>Implemented Custom Post Types</li>
@@ -216,12 +215,12 @@
           </a>
           <p>Wildlife Memory game</p>
           <ul class="projects-ul">
-            <li>Built with Vue.js</li>
-            <li>Implemented state management</li>
-            <li>Players advance the game by selecting and matching two identical images</li>
-            <li>Non-matching image selections are reset automatically</li>
-            <li>Brief alerts are displayed for both successful matches and failed attempts</li>
-            <li>Game resets and cards get randomly shuffled again after the "Play Again" button is pressed</li>
+            <li>Built with <span class="tech-text">Vue.js</span>, <span class="tech-text">CSS</span>, <span class="tech-text">Bootstrap</span></li>
+            <li>Created a memory game where players flip cards to find matching pairs.</li>
+            <li>Cards are shuffled and randomized at the beginning of each game.</li>
+            <li>Managed game states like flipped cards, matched cards, game status.</li>
+            <li>Added flip animations.</li>
+            <li>Displayed messages when a match is found and when the game is complete.</li>
           </ul>            
           <div class="demo">
             <a class="btn btn-outline-white" href="https://solarwind559.github.io/memory-game/" target="_blank" rel="noopener noreferrer" title="Visit page">Demo</a>
@@ -235,7 +234,7 @@
           </a>
           <p>Gif Search App</p>  
           <ul class="projects-ul">
-            <li>Built with Dart and Flutter</li>
+            <li>Built with <span class="tech-text">Dart</span>, <span class="tech-text">Flutter</span></li> <span class="tech-text"></span>
             <li>Used the GIPHY API to access the Giphy GIF database</li>
             <li>Fully supported on both Android and iOS devices</li>
             <li>Included a search functionality for finding GIFs using keywords</li>
